// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductCard Component > Snapshot tests > debe renderizar ProductCard correctamente 1`] = `
<div>
  <div
    class="bg-white border border-slate-200/80 rounded-3xl p-4 flex flex-col items-center drop-shadow-[0_15px_25px_rgba(30,56,89,0.12)] transition-all duration-300 hover:-translate-y-1.5 hover:drop-shadow-[0_22px_35px_rgba(30,56,89,0.22)] hover:border-slate-300 cursor-pointer group select-none relative h-full justify-between"
  >
    <div
      class="w-full h-44 bg-slate-50/70 rounded-2xl mb-3 overflow-hidden border border-slate-100 flex items-center justify-center p-3 relative shrink-0"
    >
      <img
        alt="Laptop Gaming"
        class="max-h-full max-w-full object-contain mix-blend-multiply group-hover:scale-105 transition-transform duration-300"
        src="https://example.com/laptop.jpg"
      />
    </div>
    <div
      class="w-full text-center flex flex-col flex-1 justify-between px-1 my-1"
    >
      <div>
        <span
          class="text-[10px] text-slate-400 font-mono tracking-tight block mb-1"
        >
          SKU: 
          LAPTOP001
           
          <span
            class="text-slate-300"
          >
            |
          </span>
           
          <span
            class="text-emerald-600 font-bold"
          >
            STOCK: 
            5
          </span>
        </span>
        <h3
          class="text-xs font-bold text-slate-800 line-clamp-2 leading-snug group-hover:text-[#1E3859] transition-colors"
        >
          Laptop Gaming
        </h3>
      </div>
      <span
        class="text-base font-black text-[#1E3859] font-mono mt-2.5 block"
      >
        $
        1.500
      </span>
    </div>
    <button
      class="w-full text-white py-2.5 rounded-full text-xs font-bold transition-all hover:opacity-95 active:scale-[0.98] disabled:cursor-not-allowed mt-3 shrink-0 shadow-md shadow-[#1E3859]/15"
      style="background-color: rgb(30, 56, 89);"
    >
      Agregar al carrito
    </button>
  </div>
</div>
`;

exports[`ProductCard Component > Snapshot tests > debe renderizar ProductCard sin stock correctamente 1`] = `
<div>
  <div
    class="bg-white border border-slate-200/80 rounded-3xl p-4 flex flex-col items-center drop-shadow-[0_15px_25px_rgba(30,56,89,0.12)] transition-all duration-300 hover:-translate-y-1.5 hover:drop-shadow-[0_22px_35px_rgba(30,56,89,0.22)] hover:border-slate-300 cursor-pointer group select-none relative h-full justify-between"
  >
    <div
      class="w-full h-44 bg-slate-50/70 rounded-2xl mb-3 overflow-hidden border border-slate-100 flex items-center justify-center p-3 relative shrink-0"
    >
      <img
        alt="Laptop Gaming"
        class="max-h-full max-w-full object-contain mix-blend-multiply group-hover:scale-105 transition-transform duration-300"
        src="https://example.com/laptop.jpg"
      />
      <span
        class="absolute top-2.5 right-2.5 bg-rose-500 text-white font-mono text-[9px] font-bold px-2 py-0.5 rounded-full uppercase tracking-wider shadow-sm"
      >
        Agotado
      </span>
    </div>
    <div
      class="w-full text-center flex flex-col flex-1 justify-between px-1 my-1"
    >
      <div>
        <span
          class="text-[10px] text-slate-400 font-mono tracking-tight block mb-1"
        >
          SKU: 
          LAPTOP001
           
          <span
            class="text-slate-300"
          >
            |
          </span>
           
          <span
            class="text-rose-500"
          >
            STOCK: 
            0
          </span>
        </span>
        <h3
          class="text-xs font-bold text-slate-800 line-clamp-2 leading-snug group-hover:text-[#1E3859] transition-colors"
        >
          Laptop Gaming
        </h3>
      </div>
      <span
        class="text-base font-black text-[#1E3859] font-mono mt-2.5 block"
      >
        $
        1.500
      </span>
    </div>
    <button
      class="w-full text-white py-2.5 rounded-full text-xs font-bold transition-all hover:opacity-95 active:scale-[0.98] disabled:cursor-not-allowed mt-3 shrink-0 shadow-md shadow-[#1E3859]/15"
      disabled=""
      style="background-color: rgb(203, 213, 225);"
    >
      Sin existencias
    </button>
  </div>
</div>
`;
